add disabled prop to EuiComboBoxOption (#650)
* add disabled prop to EuiComboBox option

* update readme

* override hover state, add disabled to example label

--- a/src/components/combo_box/combo_box_options_list/_combo_box_option.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_option.scss
@@ -16,4 +16,11 @@
     color: $euiColorPrimary;
     background-color: $euiFocusBackgroundColor;
   }
+  &:disabled {
+    color: $euiColorMediumShade;
+    cursor: not-allowed;
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
