--- a/src/components/form/field_text/_field_text.scss
+++ b/src/components/form/field_text/_field_text.scss
@@ -2,4 +2,11 @@
   @include euiFormControlStyle;
   @include euiFormControlWithIcon($isIconOptional: true);
   @include euiFormControlIsLoading;
+
+  /* Invalid state normally comes from :invalid, but several components
+  /* like EuiDatePicker need it toggled through an extra class.
+  */
+  &.euiFieldText-isInvalid {
+    @include euiFormControlInvalidStyle;
+  }
 }
