--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -15,6 +15,7 @@
 @import 'color_picker/index';
 @import 'combo_box/index';
 @import 'context_menu/index';
+@import 'date_picker/index';
 @import 'description_list/index';
 @import 'error_boundary/index';
 @import 'expression/index';
