Fix table re-rendering by showing/hiding actions column via CSS instead (#665)
* Show and hide table action column via CSS

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -144,3 +144,14 @@
     overflow: visible; /* 1 */
   }
 }
+
+.euiTableCellContent--showOnHover {
+  .euiTableCellContent__hoverItem {
+    opacity: 0;
+
+    .euiTableRow:hover &,
+    &:hover, &:focus {
+      opacity: 1;
+    }
+  }
+}
