--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -2,7 +2,7 @@
  * 1. Accounts for the border
  */
 .euiBadge {
-  font-size: $euiSizeM;
+  font-size: $euiFontSizeXS;
   font-weight: $euiFontWeightMedium;
   line-height: $euiSize + 2px; /* 1 */
   display: inline-block;
