--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -17,6 +17,7 @@
 @import 'context_menu/index';
 @import 'date_picker/index';
 @import 'description_list/index';
+@import 'empty_prompt/index';
 @import 'error_boundary/index';
 @import 'expression/index';
 @import 'filter_group/index';
