--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -193,7 +193,7 @@
   @include euiScaleText($euiFontSize);
 
   &.euiText--constrainedWidth {
-    max-width: 36rem;
+    max-width: $euiTextConstrainedMaxWidth;
     // If the max-width is way too short of the width of the container,
     // at least make it 2/3 of it's parent
     min-width: 75%;
