EuiComboBox: Add buttons for clearing and opening/closing the combo box (#698)
* add clear icon

* use shallow render in tests to avoid cascading diff changes when underlying componenets change

* update change log

* Added `onClear` prop to `EuiFormControlLayout` (#3)

* Added `onClear` prop to `EuiFormControlLayout`

This will allow these extras to properly position according to what is visible and allow for other inputs to utilize it as well.

* Adding `isClearable` back in

* Adding onClose/onOpen back in and allowing a

`onIconClick` prop on the EuiFormControlLayout that will then wrap the icon in a button.

* set isClearable to true for example

* move readme comment to master

* remove rebase garbage from changelog

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -4,7 +4,7 @@
 
   /**
    * 1. Allow pills to truncate their text with an ellipsis.
-   * 2. Don't allow pills to overlap with the caret.
+   * 2. Don't allow pills to overlap with the caret or clear button.
    * 3.
    */
   .euiComboBox__inputWrap {
@@ -13,7 +13,7 @@
     $padding: $euiSizeXS;
     display: flex; /* 1 */
     flex-wrap: wrap; /* 1 */
-    padding: $padding $euiSizeXXL $padding $padding; /* 2 */
+    padding: $padding $euiSizeXL*2 $padding $padding; /* 2 */
     align-content: flex-start;
 
     &:hover {
