--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -16,13 +16,53 @@
     pointer-events: none;
   }
 
+  .euiFormControlLayout__iconButton {
+    pointer-events: all;
+    top: $euiSizeM - 1px;
+  }
+
+  .euiFormControlLayout__clear {
+    $clearSize: $euiSize;
+
+    position: absolute;
+    top: $euiSizeM;
+    right: $euiSizeM;
+
+    @include size($clearSize);
+    background-color: transparentize($euiColorMediumShade, .5);
+    border-radius: $clearSize;
+    line-height: $clearSize;
+
+    .euiFormControlLayout__clearIcon {
+      @include size($euiSizeS);
+      fill: $euiColorEmptyShade;
+      stroke: $euiColorEmptyShade;
+      stroke-width: 3px; // increase thickness of icon at such a small size
+      margin-top: -3px;
+    }
+
+    // Loading spinner needs adjustment if clear also exists
+    ~ .euiFormControlLayout__loading {
+      right: $euiSizeM*3;
+    }
+  }
+
   .euiFormControlLayout__icon--right {
     left: auto;
     right: $euiSizeM;
 
     // Loading spinner needs adjustment if icon also exists like selects.
     ~ .euiFormControlLayout__loading {
-      right: $euiSizeXL;
+      right: $euiSizeM*3;
+    }
+
+    // Same with clear buttons
+    ~ .euiFormControlLayout__clear {
+      right: $euiSizeM*3;
+
+      ~ .euiFormControlLayout__loading {
+        right: $euiSizeM*5;
+      }
     }
   }
 
