--- a/src/components/form/_index.scss
+++ b/src/components/form/_index.scss
@@ -2,6 +2,7 @@
 @import 'mixins';
 
 @import 'checkbox/index';
+@import 'described_form_group/index';
 @import 'field_number/index';
 @import 'field_password/index';
 @import 'field_search/index';
