--- a/src/components/text/_text_color.scss
+++ b/src/components/text/_text_color.scss
@@ -11,22 +11,13 @@ $textColors: (
 
 // Create color modifiers based on the map
 @each $name, $color in $textColors {
-  .euiTextColor.euiTextColor--#{$name} {
+  .euiTextColor--#{$name} {
 
     // The below function makes sure the color is accessible on our default background.
-    color: makeHighContrastColor($color, $euiColorEmptyShade) !important;
+    color: makeHighContrastColor($color, $euiColorEmptyShade);
 
     @if $name == "ghost" {
       color: $color !important;
-    }
-
-    // We need a blanket approach for coloring. It should overule everything.
-    * {
-      color: makeHighContrastColor($color, $euiColorEmptyShade) !important;
-
-      @if $name == "ghost" {
-        color: $color !important;
-      }
     }
   }
 }
