Compressed form controls (#811)
Adds `compressed` prop to our form controls and `EuiFormRow`. This allows for compressed form elements that take up slightly less space.

--- a/src/components/form/_mixins.scss
+++ b/src/components/form/_mixins.scss
@@ -1,6 +1,7 @@
-@mixin euiFormControlSize {
+@mixin euiFormControlSize($height: $euiSizeXXL) {
   max-width: $euiFormMaxWidth;
   width: 100%;
+  height: $height;
 }
 
 @mixin euiFormControlWithIcon($isIconOptional: false) {
@@ -75,7 +76,7 @@
   border: none;
   font-size: $euiFontSizeS;
   font-family: $euiFontFamily;
-  padding: $euiSizeM;
+  padding: $euiFormControlPadding;
   color: $euiTextColor;
   background: $euiFormBackgroundColor;
   transition: box-shadow $euiAnimSpeedNormal ease-in, background $euiAnimSpeedNormal ease-in;
@@ -83,6 +84,12 @@
 
   &--fullWidth {
     max-width: 100%;
+  }
+
+  &--compressed {
+    padding-top: $euiFormControlPadding--compressed;
+    padding-bottom: $euiFormControlPadding--compressed;
+    height: $euiSizeXL;
   }
 
   &:invalid { /* 1 */
