--- a/src/components/form/text_area/_text_area.scss
+++ b/src/components/form/text_area/_text_area.scss
@@ -1,4 +1,5 @@
 .euiTextArea {
   @include euiFormControlStyle;
-  line-height: $euiLineHeight;
+  // Textareas have their own sizing
+  height: auto !important;
 }
