--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -1,15 +1,17 @@
 .euiComboBox {
-  @include euiFormControlSize;
+  @include euiFormControlSize(auto);
   position: relative;
 
   /**
    * 1. Allow pills to truncate their text with an ellipsis.
    * 2. Don't allow pills to overlap with the caret or clear button.
-   * 3.
+   * 3. The height on combo can be larger than normal text inputs.
    */
   .euiComboBox__inputWrap {
     @include euiFormControlStyle;
     @include euiFormControlWithIcon($isIconOptional: true);
+    @include euiFormControlSize(auto); /* 3 */
+
     $padding: $euiSizeXS;
     display: flex; /* 1 */
     flex-wrap: wrap; /* 1 */
