--- a/src/components/form/checkbox/_checkbox.scss
+++ b/src/components/form/checkbox/_checkbox.scss
@@ -18,7 +18,7 @@
       display: inline-block;
       position: absolute;
       left: 0;
-      top: ($euiSizeL - $euiCheckBoxSize)/2;
+      top: ($euiSizeL - $euiCheckBoxSize)/2 - 1px;
       @include euiCustomControl($type: 'square', $size: $euiCheckBoxSize);
     }
 
