Accordion needs a height calculation on mount (#816)
* Accordion needs a height calculation on mount

* add focus ring, fix styling in accordion

--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -2,14 +2,20 @@
   text-align: left;
   width: 100%;
 
-  &:hover, &:focus {
+  &:hover {
     text-decoration: underline;
     cursor: pointer;
   }
 
   &:focus {
-    background-color: $euiFocusBackgroundColor;
+    .euiAccordion__iconWrapper {
+      @include euiFocusRing;
+
+      color: $euiColorPrimary;
+      border-radius: $euiBorderRadius;
+    }
   }
+
 }
 
 .euiAccordion__childWrapper {
@@ -23,6 +29,7 @@
     opacity $euiAnimSpeedNormal $euiAnimSlightResistance
   ;
 }
+
 
 $paddingSizes: (
   xs: $euiSizeXS,
