--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -8,6 +8,7 @@
 @import 'basic_table/index';
 @import 'bottom_bar/index';
 @import 'button/index';
+@import 'breadcrumbs/index';
 @import 'call_out/index';
 @import 'card/index';
 @import 'code/index';
