Adds isDisabled prop to EuiComboBox (#829)
* adds isDisabled prop to EuiComboBox

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -64,4 +64,10 @@
       @include euiFormControlInvalidStyle;
     }
   }
+
+  &.euiComboBox-isDisabled {
+    .euiComboBox__inputWrap {
+      @include euiFormControlDisabledStyle;
+    }
+  }
 }
