Add header links, replace header breadcrumbs, fix accessibility issues around them (#844)
* Replaces `EuiHeaderBreadcrumb` components with `EuiBreadcrumbs`
* Adds in `EuiHeaderLink` for more traditional navigation uses (@thomasneirynck needs this).
* Adds proper accessibility for the header, breadcrumbs and popups. Most notably:
    * [Breadcrumbs are now a nav element, labeled as breadcrumb](https://www.w3.org/TR/2017/NOTE-wai-aria-practices-1.1-20171214/examples/breadcrumb/index.html)
    * [Popups now get proper aria labeling](https://www.w3.org/TR/wai-aria-practices/examples/menu-button/menu-button-links.html), and an alert if they trap focus telling the user to hit escape to exit.

--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -74,7 +74,11 @@ $buttonTypes: (
     }
 
     &:focus {
-      background-color: transparentize($color, .9);
+      @if ($name == 'text') {
+        background-color: $euiColorLightestShade;
+      } @else {
+        background-color: transparentize($color, .9);
+      }
     }
 
     &:hover {
