--- a/src/components/header/_header_logo.scss
+++ b/src/components/header/_header_logo.scss
@@ -5,13 +5,31 @@
 
   position: relative;
   height: $euiHeaderChildSize;
+  line-height: $euiSizeXL;
   padding: $euiSize $euiSizeL;
   display: inline-block;
   vertical-align: middle;
+  white-space: nowrap;
+
+  &:focus,
+  &:hover {
+    text-decoration: none;
+  }
 }
 
   .euiHeaderLogo__icon {
     height: $euiSizeXL;
     width: $euiSizeL;
     opacity: 1;
+  }
+
+  .euiHeaderLogo__text {
+    @include euiTitle("s");
+    padding-left: $euiSize;
+    font-weight: $euiFontWeightLight;
+
+    @include screenXSmall() {
+      @include euiTitle("xxs");
+      font-weight: $euiFontWeightLight;
+    }
   }
