Fix bug in which disabled EuiButton, EuiButtonEmpty, and EuiButtonIcon didn't exhibit disabled behavior and visual state when href was defined. (#862)

--- a/src/components/button/button_icon/_button_icon.scss
+++ b/src/components/button/button_icon/_button_icon.scss
@@ -18,6 +18,11 @@
     color: $euiButtonColorDisabled;
     pointer-events: none;
 
+    .euiButtonIcon__icon {
+      pointer-events: auto;
+      cursor: not-allowed;
+    }
+
     &:hover, &:focus {
       background-color: $euiColorEmptyShade;
       text-decoration: none;
@@ -44,7 +49,6 @@ $buttonTypes: (
     }
 
     &:hover, &:focus {
-
       @if ($name == 'disabled') {
         cursor: not-allowed;
       }
