--- a/src/global_styling/utility/_utility.scss
+++ b/src/global_styling/utility/_utility.scss
@@ -13,10 +13,14 @@
 .eui-textCenter {text-align: center !important;}
 .eui-textLeft {text-align: left !important;}
 .eui-textRight {text-align: right !important;}
-.eui-textBreakWord {word-break: break-word !important;}
-.eui-textBreakAll {word-break: break-all !important;}
 .eui-textNoWrap {white-space: nowrap !important;}
 .eui-textInheritColor {color: inherit !important;}
+
+.eui-textBreakAll {word-break: break-all !important;}
+.eui-textBreakWord {
+  word-break: break-all !important; // Fallback for FF and IE
+  word-break: break-word !important;
+}
 
 /**
  * Text truncation
