Fix EuiComboBox focus trap (#866)
* Fix bug where clicking the combo box caret would focus on the button.
- Set focus on searchInput when you click the caret to open the combo box.
* Fix EuiComboBox focus trap. Make clear button keyboard-accessible.
- Redesign EuiFormControlLayout props to use icon and clear configuration objects.
* Protect against tab amounts that are not 1 or -1.
* Remove virtualized list from tab order.
* Refactor EuiFormControlLayout and add examples of it to the docs.
* Add extra space to bottom of docs site pages.

--- a/src/components/form/form_control_layout/_mixins.scss
+++ b/src/components/form/form_control_layout/_mixins.scss
@@ -5,6 +5,11 @@
   background-color: transparentize($euiColorMediumShade, .5);
   border-radius: $clearSize;
   line-height: $clearSize;
+  transition: background-color $euiAnimSpeedExtraFast $euiAnimSlightResistance;
+
+  &:focus, &:hover {
+    background-color: $euiColorPrimary;
+  }
 
   #{$iconClass} {
     @include size($euiSizeS);
