--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -13,80 +13,49 @@
   }
 
   .euiFormControlLayout__icon {
-    position: absolute;
-    top: $euiFormControlPadding;
-    left: $euiFormControlPadding;
     pointer-events: none;
-
-    @at-root {
-      .euiFormControlLayout--compressed#{&} {
-        top: $euiFormControlPadding--compressed;
-      }
-    }
   }
 
-  .euiFormControlLayout__iconButton {
+  .euiFormControlLayout__icon--button {
     pointer-events: all;
+    height: $euiSize;
+    width: $euiSize;
     @include size($euiSize);
 
     .euiIcon {
       vertical-align: baseline;
     }
 
-    @at-root {
-      .euiFormControlLayout--compressed#{&} {
-        top: $euiFormControlPadding--compressed - 1px;
-      }
+    svg {
+      margin-top: -$euiSizeXS;
     }
+
+    &:focus {
+      background: $euiColorPrimary;
+      border-radius: 100%;
+      color: $euiColorGhost;
+    }
+  }
+
+  .euiFormControlLayout__icons {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: $euiFormControlPadding;
+    display: flex;
+    align-items: center;
+
+    > * + * {
+      margin-left: $euiFormControlPadding;
+    }
+  }
+
+  .euiFormControlLayout__icons--right {
+    left: auto;
+    right: $euiFormControlPadding;
   }
 
   .euiFormControlLayout__clear {
-    position: absolute;
-    top: $euiFormControlPadding;
-    right: $euiFormControlPadding;
-
     @include euiFormControlLayout__clear('.euiFormControlLayout__clearIcon');
-
-    @at-root {
-      .euiFormControlLayout--compressed#{&} {
-        top: $euiFormControlPadding--compressed + 2px;
-      }
-    }
-
-    // Loading spinner needs adjustment if clear also exists
-    ~ .euiFormControlLayout__loading {
-      right: $euiFormControlPadding*3;
-    }
-  }
-
-  .euiFormControlLayout__icon--right {
-    left: auto;
-    right: $euiFormControlPadding;
-
-    // Loading spinner needs adjustment if icon also exists like selects.
-    ~ .euiFormControlLayout__loading {
-      right: $euiFormControlPadding*3;
-    }
-
-    // Same with clear buttons
-    ~ .euiFormControlLayout__clear {
-      right: $euiFormControlPadding*3;
-
-      ~ .euiFormControlLayout__loading {
-        right: $euiFormControlPadding*5;
-      }
-    }
-  }
-
-  .euiFormControlLayout__loading {
-    position: absolute;
-    top: $euiFormControlPadding;
-    right: $euiFormControlPadding;
-
-    @at-root {
-      .euiFormControlLayout--compressed#{&} {
-        top: $euiFormControlPadding--compressed + 1px;
-      }
-    }
   }
 }
