--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -49,5 +49,6 @@
 @import 'tabs/index';
 @import 'title/index';
 @import 'toast/index';
+@import 'toggle/index';
 @import 'tool_tip/index';
 @import 'text/index';
