Remove loose & in flex group (#880)

--- a/src/components/flex/_flex_group.scss
+++ b/src/components/flex/_flex_group.scss
@@ -26,7 +26,7 @@ $gutterTypes: (
 @each $gutterName, $gutterSize in $gutterTypes {
   $halfGutterSize: $gutterSize * 0.5;
 
-  &.euiFlexGroup--#{$gutterName} {
+  .euiFlexGroup--#{$gutterName} {
     margin: -$halfGutterSize;
 
     & > .euiFlexItem {
