--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -7,7 +7,6 @@
   ul,
   ol,
   dl,
-  dd,
   blockquote,
   img,
   pre {
@@ -30,6 +29,10 @@
   h5,
   h6 {
     margin-bottom: convertToRem($baseLineHeightMultiplier * 1);
+  }
+
+  dd + dt {
+    margin-top: convertToRem($baseLineHeightMultiplier * 2);
   }
 
   * + h2,
@@ -56,8 +59,14 @@
   }
 
   h4,
-  dt {
+  dt,
+  dl.eui-definitionListReverse dd {
     font-size: convertToRem($baseFontSize * nth($euiTextScale, 5)); // skip level 4 on purpose
+  }
+
+  dl.eui-definitionListReverse dt {
+    font-size: convertToRem($baseFontSize * nth($euiTextScale, 7));
+    color: $euiTextColor;
   }
 
   h5 {
