--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -13,6 +13,7 @@ $euiCardTitleSize: 18px; // Hardcoded pixel value for theme parity.
  * 3. Fix for IE to ensure badges are visible outside of a <button> tag
  * 4. Fix for IE where the image correctly resizes in width but doesn't collapse it's height
       (https://github.com/philipwalton/flexbugs/issues/75#issuecomment-134702421)
+ * 5. Horizontal layouts should always top left align no matter the textAlign prop
  */
 
 // EuiCard specific
@@ -137,4 +138,29 @@ $euiCardTitleSize: 18px; // Hardcoded pixel value for theme parity.
 .euiCard__footer:not(:empty) {
   flex-grow: 0; /* 1 */
   margin-top: $euiCardSpacing;
+}
+
+.euiCard.euiCard--horizontal {
+  .euiCard__content {
+    padding-top: $euiSizeS; // Aligns title and text a bit better and adds spacing in case of beta badge
+    text-align: left; /* 5 */
+  }
+}
+
+// Only change the flex direction if the card has an icon
+// otherwise the button tag won't properly align contents to top
+.euiCard.euiCard--horizontal.euiCard--hasIcon {
+  flex-direction: row;
+  align-items: flex-start !important; /* 5 */
+
+  .euiCard__top,
+  .euiCard__content {
+    width: auto; // Makes sure the top shrinks and the content grows
+    margin-top: 0;
+  }
+
+  .euiCard__top .euiCard__icon {
+    margin-top: 0;
+    margin-right: $euiSize;
+  }
 }
