--- a/src/components/page/_page.scss
+++ b/src/components/page/_page.scss
@@ -1,3 +1,14 @@
 .euiPage {
   padding: $euiSize;
+  background-color: $euiColorLightestShade;
+
+  &--restrictWidth-default,
+  &--restrictWidth-custom {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &--restrictWidth-default {
+    max-width: 1000px;
+  }
 }
