Fix focus state regression of icons in EuiFormControlLayout. (#898)
* Fix focus state regression of icons in EuiFormControlLayout.
* Refactor EuiFormControlLayout for readability and clarity.
* Break up SCSS into multiple files and improve class names.
* Normalize DOM structure of EuiFormControlLayoutCustomIcon.

--- a/src/components/form/form_control_layout/_mixins.scss
+++ b/src/components/form/form_control_layout/_mixins.scss
@@ -1,5 +1,6 @@
-@mixin euiFormControlLayout__clear($iconClass) {
+@mixin euiFormControlLayoutClearIcon($iconClass) {
   $clearSize: $euiSize;
+  pointer-events: all;
 
   @include size($clearSize);
   background-color: transparentize($euiColorMediumShade, .5);
